--- a/.github/workflows/prerelease-manual.yml
+++ b/.github/workflows/prerelease-manual.yml
@@ -50,7 +50,7 @@ jobs:
       - name: "Build"
         uses: "docker/build-push-action@v2"
         with:
-          push: false
+          push: true
           target: final
           file: "docker/Dockerfile"
           platforms: "linux/amd64,linux/arm64"
@@ -77,7 +77,7 @@ jobs:
       - name: "Build Dev Containers"
         uses: "docker/build-push-action@v2"
         with:
-          push: false
+          push: true
           target: final-dev
           file: "docker/Dockerfile"
           platforms: "linux/amd64,linux/arm64"
