--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,12 @@ social-auth-core = {version = "~4.4.2", optional = true, extras = ["openidconnec
 social-auth-app-django = "~5.2.0"
 # Rendering of SVG images (for rack elevations, etc.)
 svgwrite = "~1.4.2"
+nautobot-firewall-models = "^2.0.1"
+nautobot-ssot = "^2.0.2"
+nautobot-golden-config = "^2.0.1"
+nautobot-plugin-nornir = "^2.0.0"
+nautobot-device-onboarding = "^3.0.1"
+
 
 [tool.poetry.extras]
 all = ["django-auth-ldap", "django-storages", "mysqlclient", "napalm", "social-auth-core"]
