--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ nautobot-ssot = "^2.0.2"
 nautobot-golden-config = "^2.0.1"
 nautobot-plugin-nornir = "^2.0.0"
 nautobot-device-onboarding = "^3.0.1"
+pan-os-python = "^1.11.0"
 
 
 [tool.poetry.extras]
